@@ -6,6 +6,7 @@ class Terms {
     const YOUTUBE = 'Youtube';
     const INFORMATION = 'Record_Inormation';
     const SUBLISTS = 'Sublists';
+    const STATISTICS = 'Statistics';
     
     const BEFORE = 1;
     const BEHIND = 2;
