@@ -1,0 +1,6 @@
+<p>
+    <?php
+    $this->widget('bootstrap.widgets.TbLabel', array('label' => 'counted visits:',));
+    echo " " .$visitCounter;
+    ?>
+</p>
