@@ -18,11 +18,6 @@
 	font-weight: bold;
 }
 
-.grid-view .colDate
-{
-	font-weight: bold;
-}
-
 .grid-view .colArtist
 {
 	font-weight: bold;
@@ -57,12 +52,12 @@
 
 li.page, li.next, li.previous {margin:0}
 
-.grid-view tbody .buttons
+.grid-view tbody .colButtons
 {
     background:none !important;
 }
 
-.grid-view tbody .trade-status
+.grid-view tbody .colTradeStatus
 {
     background:none !important;
     color: #FF0000;
