@@ -1,4 +1,6 @@
 1.1
+- added: visit counter for detail pages of records
+- added: column management for lists
 - changed: naming conventions for list cell classes, example: "location-col" -> "colLocation"
 - bugfixing: length limitation in backend views for list preset forms
 - bugfixing: newslist/signature shows form smae artists are no sorted chronologic (and not longer for daytime when they werde added)
